# NEXEN

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  docker-daemon.json  pyproject.toml  start-dev.sh
doc/: Agent_Configurations.md  Architecture_Design_Philosophy.md  Knowledge_Base_Architecture.md  Prompt_Engineering_System.md  System_Architecture_Overview.md  Web_Application_Design.md
docs/architecture/: ARCHITECTURE.md
docs/modules/: MY_LIBRARY.md  WORKFLOW_SYSTEM_DESIGN.md
docs/versions/: ARCHITECTURE_v1.0.0_20250116.md  ARCHITECTURE_v1.1.0_20250116.md  ARCHITECTURE_v1.3.0_20250116.md
nexen/: __init__.py
nexen/agents/: __init__.py  generic.py
nexen/agents/information/: __init__.py  cn_specialist.py  explorer.py  social_scout.py  vision_analyst.py
nexen/agents/production/: __init__.py  archivist.py  builder.py  prompt_engineer.py  scribe.py
nexen/agents/reasoning/: __init__.py  connector.py  critic.py  genealogist.py  historian.py  logician.py
nexen/cli/: __init__.py  main.py
nexen/config/: __init__.py  agents.py  models.py  settings.py
nexen/core/: __init__.py  base_agent.py  coordinator.py  model_router.py
nexen/core/pipeline/: __init__.py  context_preprocessor.py  memory_retrieval.py  prompt_pipeline.py
nexen/memory/: __init__.py  file_store.py  retriever.py  schemas.py
nexen/skills/: __init__.py  anthropic_loader.py  base.py  registry.py
nexen/skills/scientific/: __init__.py  analysis.py  databases.py  literature.py  methodology.py
web/backend/: Dockerfile  check_users.py  pyproject.toml
web/backend/app/: __init__.py  config.py  main.py
web/backend/app/api/: agent_profiles.py  agents.py  auth.py  chat.py  decisions.py  explore.py  image.py  knowledge.py  library.py  reports.py  research.py  sessions.py  skills.py  store.py  teams.py  usage.py  user_settings.py  workflows.py  writing.py
web/backend/app/api/docs/: CHAT_API.md  EXPLORE_API.md
web/backend/app/auth/: __init__.py  deps.py  security.py
web/backend/app/db/: __init__.py  database.py  models.py
web/backend/app/db/migrations/: migration_001.py
web/backend/app/services/: agent_service.py  api_key_storage.py  parsing_service.py  research_service.py  search_service.py  skill_service.py  task_scheduler.py  usage_service.py  workspace_service.py
web/backend/app/websocket/: __init__.py
web/frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
web/frontend/app/: globals.css  layout.tsx  page.tsx
web/frontend/components/: AgentConfigModal.tsx  AgentNetworkGraph.tsx  HierarchicalAgentGraph.tsx
web/frontend/hooks/: useDebounce.ts
web/frontend/lib/: agentGraphStore.ts  aiAskStore.ts  api.ts  libraryStore.ts  modelConfig.ts  reportsStore.ts  researchTeamStore.ts  store.ts  websocket.ts  (+2 more)
(+52 files in other folders)
