[project]
name = "nexen-web-backend"
version = "0.1.0"
description = "NEXEN Web Application Backend"
requires-python = ">=3.11"

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    
    # WebSocket
    "websockets>=13.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    
    # Redis
    "redis>=5.2.0",
    
    # Task Queue
    "celery>=5.4.0",
    
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    
    # Validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    
    # NEXEN Core
    "nexen @ file:///${PROJECT_ROOT}/../..",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
